<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="305dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/lastSeenText"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:text="@string/userAtTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/imageButton"
        app:layout_constraintEnd_toEndOf="@id/imageButton"
        app:layout_constraintStart_toStartOf="@id/imageButton"
        app:layout_constraintTop_toTopOf="@id/imageButton"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/lastRead"
        android:layout_width="304dp"
        android:layout_height="21dp"
        android:text="#lastReadTitle"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.9" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="365dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hoHy1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/hymn1_title" />

            <Button
                android:id="@+id/hoHy2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/hymn2_title" />

            <Button
                android:id="@+id/hoHy3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/hymn3_title" />

            <Button
                android:id="@+id/hoHy4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/hymn4_title" />

            <Button
                android:id="@+id/hoHy5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/hymn5_title" />

            <Button
                android:id="@+id/hoHy6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/hymn6_title" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/homericHymnsTitle"
        android:layout_width="169dp"
        android:layout_height="30dp"
        android:text="@string/homeric_hymns"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>